Fri Jun 21 17:59:24 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Add assignment of the array representative
	  element.

	* features/code_check/W0459.feature : Add scenario to reproduce
	  false-negative of W0459 code check caused by missing representative
	  element updating.

Fri Jun 21 16:16:16 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/expr.rb : Improve heuristics of array subscript
	  evaluation with indefinite subscript again and again.

	* lib/adlint/cc1/object.rb : Fix bad management of the representative
	  element of array variables in order to correctly update the array by
	  reassigning new value to its representative element.
	  Add UnmappedMemoryWindow instead of UnmappedMemoryBlock.

	* features/code_check/W0100.feature : Add scenario to reproduce
	  false-positive of W0100 code check caused by bad representative array
	  element.
	* MANIFEST : Ditto.

Thu Jun 20 17:59:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/expr.rb : Improve heuristics of array subscript
	  evaluation with indefinite subscript again.

	* lib/adlint/cc1/object.rb : Add management of the representative
	  element of array variables.
	  Add UnmappedMemoryBlock which is not mapped to the MemoryPool in
	  order to bind representative elements to their values.

	* lib/adlint/cc1/interp.rb : Scrap interpretation mode for controlling
	  expressions.
	* lib/adlint/cc1/option.rb : Ditto.

Thu Jun 20 11:21:59 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Fix bad value version management in order
	  not to forget histories of a value.

	* features/code_check/W1050.feature : Add scenario to reproduce bad
	  value version management problem.
	* MANIFEST : Ditto.

Wed Jun 19 17:17:27 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Fix bypassing inner-variable's value
	  mutation in order to correctly propagate mutation to the