@@ -1,6 +1,15 @@
+Fri Jun 21 19:14:39 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cc1/object.rb : Fix incomplete assignment to the array
+	  representative element.
+
+	* features/code_check/W0459.feature : Add scenario to reproduce
+	  false-positive of W0459 code check caused by missing representative
+	  element updating.
+
 Fri Jun 21 17:59:24 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
-	* lib/adlint/cc1/object.rb : Add assignment of the array representative
+	* lib/adlint/cc1/object.rb : Add assignment to the array representative
 	  element.
 
 	* features/code_check/W0459.feature : Add scenario to reproduce
